# ical2crontab

./: .gitignore  CMakeLists.txt  README.md  ical.c
cmake/: FindLIBICAL.cmake
scripts/: ical2text.pl
src/: CMakeLists.txt  ical.c  ical.h  ical_dump.c  main.c
tests/: 00-OldEvent.ical  01-Reveil.ical  01-Reveil.ical.test  02-Santa.ical  02-Santa.ical.test  03-SaturdayNightFever.ical  03-SaturdayNightFever.ical.test  04-Sirenne.ical  04-Sirenne.ical.test  05-GetUpStandUp.ical  05-GetUpStandUp.ical.test  06-14th_of_month.ical  06-14th_of_month.ical.test  06-PatatesDu14.ical  06-PatatesDu14.ical.test  07-WakeUpButNotWednesday.ical  07-WakeUpButNotWednesday.ical.test  10-OUIFM1.ical  10-OUIFM1.ical.test  11-OldEvent.ical  12-RepeatEvent-removeoldone.ical  12-RepeatEvent-removeoldone.ical.test  CMakeLists.txt  data_1.ical
